--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>SymBNB - {% block title %}Welcome!{% endblock %}</title>
-        <link href="css/bootstrap.min.css" rel="stylesheet"> {% block stylesheets %}{% endblock %}
+        <link href="/css/bootstrap.min.css" rel="stylesheet"> 
+        <link href="/css/app.css" rel="stylesheet"> 
+        {% block stylesheets %}{% endblock %}
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -13,8 +15,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarColor03">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ path('homepage') }}">Accueil</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('ads_index') }}">Annonces</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
