--- a/templates/ad/index.html.twig
+++ b/templates/ad/index.html.twig
@@ -1,42 +1,34 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nos magnifiques annonces{% endblock %}
+{% block title %}Nos magnifiques annonces
+{% endblock %}
 
 {% block body %}
-<div class="container">
-    <h1 class="my-3">Voici les annonces de nos hôtes !</h1>
+    <div class="container">
+        <h1 class="my-3">Voici les annonces de nos hôtes !</h1>
 
-    <div class="row">
-        {% for ad in ads %}
-            {% set url = path('ads_show', {'slug': ad.slug}) %}
+        <div class="row">
+            {% for ad in ads %}
+                {% include "ad/_ad.html.twig" %}
+            {% endfor %}
+        </div>
 
-            <div class="col-md-4">
-                <div class="card bg-light mb-3">
-                    <div class="card-header text-center">
-                        {{ ad.rooms }} chambres,
-                        <strong>{{ ad.price }}&euro; /nuit</strong>
-                        <br>
-                        <small>Pas encore noté</small>
-                    </div>
-                    <a href="{{ url }}">
-                        <img alt="Image de l'appartement" src="{{ ad.coverImage }}" style="width: 100%; height: 200px; object-fit: cover; display: block">
-                    </a>
-                    <div class="card-body">
-                        <h4 class="card-title">
-                            <a href="{{ url }}">
-                                {{ ad.title }}
-                            </a>
-                        </h4>
-                        <p class="card-text">
-                            {{ ad.introduction }}
-                        </p>
-                        <div class="text-center">
-                            <a class="btn btn-secondary" href="{{ url }} ">En savoir plus</a>
-                        </div>
-                    </div>
-                </div>
-            </div>        
-        {% endfor %} 
+        <div class="d-flex justify-content-center mt-5">
+            <ul class="pagination">
+                <li class="page-item {% if page == 1 %}disabled{% endif %}">
+                    <a class="page-link" href="{{ path("ads_index", {'page': page - 1}) }}">&laquo;</a>
+                </li>
+
+                {% for i in 1..pages %}
+                    <li class="page-item {% if page == i %}active{% endif %}">
+                        <a class="page-link" href="{{ path("ads_index", {'page': i}) }}">{{ i }}</a>
+                    </li>
+                {% endfor %}
+                
+                <li class="page-item {% if page == pages %}disabled{% endif %}">
+                    <a class="page-link" href="{{ path("ads_index", {'page': page + 1}) }}">&raquo;</a>
+                </li>
+            </ul>
+        </div>
     </div>
-</div>
 {% endblock %}
