--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -18,6 +18,12 @@
                 par nuit
             </p>
             <a class="btn btn-primary" href="#">Réserver</a>
+
+            {% if app.user and app.user == ad.author %}
+                <a href="{{ path("ads_edit", {'slug': ad.slug}) }}" class="btn btn-secondary">Modifier l'annonce</a>
+                <a href="{{ path("ads_delete", {'slug': ad.slug}) }}" class="btn btn-danger" onclick="return confirm(`Êtes-vous sûr de vouloir supprimer l'annonce : {{ ad.title }} ?`)">Supprimer l'annonce</a>
+            {% endif %}
+            
         </div>
     </div>
 
@@ -54,17 +60,20 @@
                 </div>
             </div>
             <div class="col">
-                <div class="row">
-                    <div class="col-4">
-                        <img alt="Avatar de Joseph" src="http://placehold.it/64x64"></div>
+                {% set a = ad.author %}
+                <div class="row mb-3 align-items-center">
+                    <div class="col-3">
+                        <a href="{{ path("user_show", {'slug': a.slug}) }}">
+                            <img class="avatar avatar-medium" alt="Avatar de {{ a.fullName }}" src="{{ a.picture }}"></div>
+                        </a>
                     <div class="col">
-                        <h3>Joseph Dupont</h3>
-                        <span class="badge badge-primary">3 annonces</span>
+                        <a href="{{ path("user_show", {'slug': a.slug}) }}">
+                            <h3>{{ a.fullName }}</h3>
+                        </a>
+                        <span class="badge badge-primary">{{ a.ads | length }} annonces</span>
                     </div>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure nisi in vel suscipit, aliquid iusto enim cumque neque excepturi pariatur?</p>
-                <p>Ducimus tempora animi accusamus error libero quam impedit et. Cum atque hic rerum dolore voluptas officiis expedita nulla. Rerum, dignissimos.</p>
-                <p>Alias fugiat tempore, fugit aut quisquam facilis temporibus, omnis, praesentium architecto molestias quod reiciendis unde possimus vel cum rem laboriosam.</p>
+                {{ a.description | raw }}
             </div>
         </div>
     </div>
