--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -19,6 +19,8 @@
             </p>
         </div>
 
+        <h2>{{ sayHello }}</h2>
+
         <h2 class="h1 mt-3 mb-4">Nos appartements stars</h2>
 
         <div class="row">
